--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,8 +43,12 @@ jobs:
     job_j:
         <<: *defaults
         steps:
+            - run: echo "Hi from $CIRCLE_JOB" 
+    job_k:
+        <<: *defaults
+        steps:
             - run: echo "Hi from $CIRCLE_JOB"
-
+            
 workflows:
     version: 2
     demo_workdlow:
@@ -79,3 +83,7 @@ workflows:
                     - job_g
                     - job_h
                     - job_i
+            - job_k:
+                requires:
+                    - job_j
+                    - job_e
